- removed C bindings because it requires special handling of the data list - added documentation to public API - converted enum to enum class - modified API to store multiple data for a single flag - extracted implementaton of parse and divided it into specialized functions - added first test for the Windows style implementation

--- a/CLAP.vcxproj.filters
+++ b/CLAP.vcxproj.filters
@@ -22,9 +22,6 @@
     <ClInclude Include="clap.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="clap.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="clap.cpp">
@@ -34,5 +31,6 @@
   <ItemGroup>
     <None Include=".gitattributes" />
     <None Include=".gitignore" />
+    <None Include="cpp.hint" />
   </ItemGroup>
 </Project>
