--- a/CLAP.vcxproj
+++ b/CLAP.vcxproj
@@ -131,7 +131,6 @@
     <Text Include="LICENSE" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="clap.h" />
     <ClInclude Include="clap.hpp" />
   </ItemGroup>
   <ItemGroup>
@@ -140,6 +139,7 @@
   <ItemGroup>
     <None Include=".gitattributes" />
     <None Include=".gitignore" />
+    <None Include="cpp.hint" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
