- removed .hint files - created unit test for UNIX style - formatted unit tests - updated internal documentation - extracted method to get the data - switched to remove_prefix for better readability and code reusing - implemented parse_unix

--- a/UnitTests/UnitTests.vcxproj
+++ b/UnitTests/UnitTests.vcxproj
@@ -165,6 +165,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\clap.cpp" />
+    <ClCompile Include="UnitTestsUnix.cpp" />
     <ClCompile Include="UnitTestsWin32.cpp" />
   </ItemGroup>
   <ItemGroup>
